missy job go go

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
     <head>
         <meta charset="utf-8">
-        <title>Find a Job Now!</title>
+        <title>Missy Job Find Go!</title>
         <link rel="stylesheet" href='bower_components/bootstrap/dist/css/bootstrap.css'>
         <script src=src='bower_components/angular/angular.js'></script>
         <script src='bower_components/angular-resource/angular-resource.js'></script>
